--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.3.1",
+    "sinon": "^8.1.1",
+    "sinon-chai": "^3.4.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
