--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "sequelize": "^5.15.1",
     "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "zipcodes": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
