--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.0",
     "casual": "^1.6.2",
     "compression": "^1.7.3",
@@ -65,6 +67,7 @@
     "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0",
     "socket.io": "^2.2.0",
+    "typeface-roboto": "0.0.75",
     "zipcodes": "^8.0.0"
   },
   "devDependencies": {
