--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "^16.12.0",
     "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.12.0",
+    "react-google-button": "^0.7.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
