further styled selected user profile page

--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.12.0",
     "react-google-button": "^0.7.0",
+    "react-ratings-declarative": "^3.4.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-star-ratings": "^2.3.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
